fix image bug, visibility hidden

--- a/Projet9/authentification/static/authentification/css/scss/main.scss
+++ b/Projet9/authentification/static/authentification/css/scss/main.scss
@@ -66,6 +66,9 @@ body {
             border-radius: 5px;
             padding: 10px;
             margin: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         a{
             text-decoration: none;
