--- a/Projet9/static/css/style.css
+++ b/Projet9/static/css/style.css
@@ -1,6 +1,7 @@
 /*---- Base ----*/
 body {
-  font-family: "Fjalla One", "Helvetica", sans-serif;
+  margin: auto;
+  max-width: 1084px;
 }
 
 header {
@@ -28,25 +29,25 @@ header .navbar ul li {
   text-align: center;
 }
 header .logout img {
-  visibility: hidden;
+  display: None;
 }
 
 input.button, .button {
-  display: block;
   color: #f9fbfc;
   background-color: #e1755e;
   border: #e1755e;
+  display: block;
   margin: auto;
   padding: 10px;
 }
 
 .button2 {
-  display: block;
   border: #a2cdb8;
   color: #f9fbfc;
   background-color: #a2cdb8;
   font-weight: bold;
-  margin: auto;
+  display: block;
+  margin: 0 auto;
   padding: 10px;
 }
 
@@ -108,6 +109,7 @@ a {
 }
 @media all and (max-width: 700px) {
   header {
+    height: 125px;
     max-width: 80%;
     display: grid;
     grid-template-columns: 33% 34% 33%;
@@ -136,14 +138,17 @@ a {
   }
   header .logout {
     max-height: 100%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     grid-column: 3/span 1;
   }
   header .logout .logout_link {
-    visibility: hidden;
+    display: none;
   }
   header .logout img {
-    visibility: visible;
+    display: inline;
     width: 60px;
     height: 60px;
   }
